// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildDraftSurvey — CA-001 > snapshot — discharge (CA-001) 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Survey Report",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "Ref: ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "ref",
              },
              "type": "dataField",
            },
          ],
          "text": "—",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Draft Survey",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 1,
      },
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "field": "vessel_name",
              },
              "type": "dataField",
            },
          ],
          "text": "“MV Perseus I”",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "Flag ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "flag",
              },
              "type": "dataField",
            },
          ],
          "text": "Malta",
          "type": "text",
        },
        {
          "text": " — IMO ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "imo",
              },
              "type": "dataField",
            },
          ],
          "text": "9876543",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "at ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "port",
              },
              "type": "dataField",
            },
          ],
          "text": "Santos",
          "type": "text",
        },
        {
          "text": " Port / Brazil — ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "final_date",
              },
              "type": "dataField",
            },
          ],
          "text": "24/Jun/2026",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "heightMm": 95,
        "photoId": null,
        "slotId": "cover",
        "src": null,
        "widthMm": 150,
      },
      "type": "photoFrame",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Person / Companies Contacted",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "Client: ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "client",
              },
              "type": "dataField",
            },
          ],
          "text": "Cargill",
          "type": "text",
        },
        {
          "text": " — ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "operator",
              },
              "type": "dataField",
            },
          ],
          "text": "Santos Brasil",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Undersigned Surveyor: NAABSA Marine Surveyors — ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Vessel's Command (Master / Chief Officer): ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "captain",
              },
              "type": "dataField",
            },
          ],
          "text": "J. Silva",
          "type": "text",
        },
        {
          "text": " / ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "chief_officer",
              },
              "type": "dataField",
            },
          ],
          "text": "A. Pereira",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Contents",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "1.  Background",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "2.  Ship's Particulars",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "3.  Draft Survey",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "4.  Initial",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "6.  Final",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "7.  Photographic Report",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "8.  Attachment",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Background",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "In compliance with the appointment survey from Messrs. ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "client",
              },
              "type": "dataField",
            },
          ],
          "text": "Cargill",
          "type": "text",
        },
        {
          "text": ", we attended the vessel to carry out the Draft Survey to ascertain the total quantity of cargo discharged and to compare it with the Shore scale / Bills of lading.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "She called ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "port",
              },
              "type": "dataField",
            },
          ],
          "text": "Santos",
          "type": "text",
        },
        {
          "text": " Port to discharge a cargo of ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "cargo",
              },
              "type": "dataField",
            },
          ],
          "text": "Soybean",
          "type": "text",
        },
        {
          "text": " in bulk loaded in ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "discharging_port",
              },
              "type": "dataField",
            },
          ],
          "text": "Rotterdam",
          "type": "text",
        },
        {
          "text": ".",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Ship's Particulars",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "rows": [
          [
            "Flag",
            "Malta",
          ],
          [
            "Port registry",
            "—",
          ],
          [
            "Call sign",
            "—",
          ],
          [
            "IMO number",
            "9876543",
          ],
          [
            "Type",
            "—",
          ],
          [
            "Delivered",
            "—",
          ],
          [
            "LOA",
            "—",
          ],
          [
            "LBP",
            "—",
          ],
          [
            "Depth moulded",
            "—",
          ],
          [
            "Breadth moulded",
            "—",
          ],
          [
            "Net tonnage",
            "—",
          ],
          [
            "Gross tonnage",
            "—",
          ],
          [
            "Summer DWT",
            "—",
          ],
        ],
        "tableId": "ships_particulars",
      },
      "type": "dataTable",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Draft Survey",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Initial",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "The initial Draft Survey was carried out on ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "initial_date",
              },
              "type": "dataField",
            },
          ],
          "text": "24/Jun/2026",
          "type": "text",
        },
        {
          "text": ", upon berthing at ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "terminal",
              },
              "type": "dataField",
            },
          ],
          "text": "T-Granéis",
          "type": "text",
        },
        {
          "text": " Terminal, shed ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "shed",
              },
              "type": "dataField",
            },
          ],
          "text": "—",
          "type": "text",
        },
        {
          "text": ", from ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "initial_start",
              },
              "type": "dataField",
            },
          ],
          "text": "08:00h",
          "type": "text",
        },
        {
          "text": " up to ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "initial_end",
              },
              "type": "dataField",
            },
          ],
          "text": "10:30h",
          "type": "text",
        },
        {
          "text": " local time jointly with ship's command and the undersigned surveyor.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Draft readings: Starboard side from shore, alongside vessel and Port side from boat.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "4.1. Draft readings",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "headers": [
          "Draft Mark",
          "Means (m)",
          "Mean corrected (m)",
          "",
          "Item",
          "Value",
        ],
        "rows": [
          [
            "Fwd",
            "4.780",
            "4.7802",
            "",
            "Trim observed",
            "-0.6600 m",
          ],
          [
            "Ms",
            "5.120",
            "5.1198",
            "",
            "Trim corrected",
            "-0.6599 m",
          ],
          [
            "Aft",
            "5.440",
            "5.4401",
            "",
            "Heel",
            "—",
          ],
          [
            "",
            "",
            "",
            "",
            "Deflection",
            "—",
          ],
        ],
        "tableId": "init_readings",
      },
      "type": "dataTable",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "4.2. Sea water density",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "A seawater sample was collected in way of the midship draft mark, on the sea side. The vessel's hydrometer was considered the official instrument for all readings.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "4.3. Ballast water and fresh water",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "All ballast water tanks were gauged individually, and the volumes were calculated by applying the applicable trim and list corrections. The fresh water quantity was provided by the Chief Officer.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "4.4. Fuel R.O.B.",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "According to the logbook — FWE.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "4.5. Initial Draft details",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Final",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "The final Draft Survey was carried out on ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "final_date",
              },
              "type": "dataField",
            },
          ],
          "text": "24/Jun/2026",
          "type": "text",
        },
        {
          "text": ", from ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "final_start",
              },
              "type": "dataField",
            },
          ],
          "text": "14:00h",
          "type": "text",
        },
        {
          "text": " up to ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "final_end",
              },
              "type": "dataField",
            },
          ],
          "text": "16:30h",
          "type": "text",
        },
        {
          "text": " local time jointly with ship's command and the undersigned surveyor to ascertain the total quantity of the cargo discharged being the following figures disclosed:",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Shore Scale / BsL figures (Official): —",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "NAABSA's surveyor figures: —",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Difference as per our figures: — or —",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Vessel's figures: —",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Draft readings: Starboard side from shore, alongside vessel and Port side from boat.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "6.1. Draft readings",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "headers": [
          "Draft Mark",
          "Means (m)",
          "Mean corrected (m)",
          "",
          "Item",
          "Value",
        ],
        "rows": [
          [
            "Fwd",
            "4.550",
            "4.5503",
            "",
            "Trim observed",
            "-0.8300 m",
          ],
          [
            "Ms",
            "4.970",
            "4.9701",
            "",
            "Trim corrected",
            "-0.8300 m",
          ],
          [
            "Aft",
            "5.380",
            "5.3800",
            "",
            "List",
            "—",
          ],
          [
            "",
            "",
            "",
            "",
            "Deflection",
            "—",
          ],
        ],
        "tableId": "fin_readings",
      },
      "type": "dataTable",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "6.2. Sea water density",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "A seawater sample was collected in way of the midship draft mark, on the sea side. The vessel's hydrometer was considered the official instrument for all readings.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "6.3. Ballast water and fresh water",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "All ballast water tanks were gauged individually, and the volumes were calculated by applying the applicable trim and list corrections. The fresh water quantity was provided by the Chief Officer.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "6.4. Fuel R.O.B.",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "Declared by the Chief Engineer at the time of survey.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "6.5. Final Draft details",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Photographic Report",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "7.1. Initial",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "heightMm": 100,
        "photoId": "photo-1",
        "slotId": "photos_initial",
        "src": "https://cdn.example.com/photo.jpg",
        "widthMm": 150,
      },
      "type": "photoFrame",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "7.3. Final",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "heightMm": 100,
        "photoId": null,
        "slotId": "photos_final",
        "src": null,
        "widthMm": 150,
      },
      "type": "photoFrame",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Attachment",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "Draft Survey Certificates issued by undersigned surveyor.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Draft Survey Certificate issued by vessel.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Draft Survey Certificate issued by Terminal's surveyor.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`buildDraftSurvey — CA-001 > snapshot — loading (CA-001) 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Survey Report",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "Ref: ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "ref",
              },
              "type": "dataField",
            },
          ],
          "text": "—",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Draft Survey",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 1,
      },
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "field": "vessel_name",
              },
              "type": "dataField",
            },
          ],
          "text": "“MV Perseus I”",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "Flag ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "flag",
              },
              "type": "dataField",
            },
          ],
          "text": "Malta",
          "type": "text",
        },
        {
          "text": " — IMO ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "imo",
              },
              "type": "dataField",
            },
          ],
          "text": "9876543",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "at ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "port",
              },
              "type": "dataField",
            },
          ],
          "text": "Santos",
          "type": "text",
        },
        {
          "text": " Port / Brazil — ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "final_date",
              },
              "type": "dataField",
            },
          ],
          "text": "24/Jun/2026",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "heightMm": 95,
        "photoId": null,
        "slotId": "cover",
        "src": null,
        "widthMm": 150,
      },
      "type": "photoFrame",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Person / Companies Contacted",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "Client: ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "client",
              },
              "type": "dataField",
            },
          ],
          "text": "Cargill",
          "type": "text",
        },
        {
          "text": " — ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "operator",
              },
              "type": "dataField",
            },
          ],
          "text": "Santos Brasil",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Undersigned Surveyor: NAABSA Marine Surveyors — ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Vessel's Command (Master / Chief Officer): ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "captain",
              },
              "type": "dataField",
            },
          ],
          "text": "J. Silva",
          "type": "text",
        },
        {
          "text": " / ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "chief_officer",
              },
              "type": "dataField",
            },
          ],
          "text": "A. Pereira",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Contents",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "1.  Background",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "2.  Ship's Particulars",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "3.  Draft Survey",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "4.  Initial",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "6.  Final",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "7.  Photographic Report",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "8.  Attachment",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Background",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "In compliance with the appointment survey from Messrs. ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "client",
              },
              "type": "dataField",
            },
          ],
          "text": "Cargill",
          "type": "text",
        },
        {
          "text": ", we attended the vessel to carry out the Draft Survey to ascertain the total quantity of cargo loaded and to compare it with the Shore scale / Bills of lading.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "She called ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "port",
              },
              "type": "dataField",
            },
          ],
          "text": "Santos",
          "type": "text",
        },
        {
          "text": " Port to load a cargo of ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "cargo",
              },
              "type": "dataField",
            },
          ],
          "text": "Soybean",
          "type": "text",
        },
        {
          "text": " in bulk bound to ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "discharging_port",
              },
              "type": "dataField",
            },
          ],
          "text": "Rotterdam",
          "type": "text",
        },
        {
          "text": ".",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Ship's Particulars",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "rows": [
          [
            "Flag",
            "Malta",
          ],
          [
            "Port registry",
            "—",
          ],
          [
            "Call sign",
            "—",
          ],
          [
            "IMO number",
            "9876543",
          ],
          [
            "Type",
            "—",
          ],
          [
            "Delivered",
            "—",
          ],
          [
            "LOA",
            "—",
          ],
          [
            "LBP",
            "—",
          ],
          [
            "Depth moulded",
            "—",
          ],
          [
            "Breadth moulded",
            "—",
          ],
          [
            "Net tonnage",
            "—",
          ],
          [
            "Gross tonnage",
            "—",
          ],
          [
            "Summer DWT",
            "—",
          ],
        ],
        "tableId": "ships_particulars",
      },
      "type": "dataTable",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Draft Survey",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Initial",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "The initial Draft Survey was carried out on ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "initial_date",
              },
              "type": "dataField",
            },
          ],
          "text": "24/Jun/2026",
          "type": "text",
        },
        {
          "text": ", upon berthing at ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "terminal",
              },
              "type": "dataField",
            },
          ],
          "text": "T-Granéis",
          "type": "text",
        },
        {
          "text": " Terminal, shed ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "shed",
              },
              "type": "dataField",
            },
          ],
          "text": "—",
          "type": "text",
        },
        {
          "text": ", from ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "initial_start",
              },
              "type": "dataField",
            },
          ],
          "text": "08:00h",
          "type": "text",
        },
        {
          "text": " up to ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "initial_end",
              },
              "type": "dataField",
            },
          ],
          "text": "10:30h",
          "type": "text",
        },
        {
          "text": " local time jointly with ship's command and the undersigned surveyor.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Draft readings: Starboard side from shore, alongside vessel and Port side from boat.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "4.1. Draft readings",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "headers": [
          "Draft Mark",
          "Means (m)",
          "Mean corrected (m)",
          "",
          "Item",
          "Value",
        ],
        "rows": [
          [
            "Fwd",
            "4.780",
            "4.7802",
            "",
            "Trim observed",
            "-0.6600 m",
          ],
          [
            "Ms",
            "5.120",
            "5.1198",
            "",
            "Trim corrected",
            "-0.6599 m",
          ],
          [
            "Aft",
            "5.440",
            "5.4401",
            "",
            "Heel",
            "—",
          ],
          [
            "",
            "",
            "",
            "",
            "Deflection",
            "—",
          ],
        ],
        "tableId": "init_readings",
      },
      "type": "dataTable",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "4.2. Sea water density",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "A seawater sample was collected in way of the midship draft mark, on the sea side. The vessel's hydrometer was considered the official instrument for all readings.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "4.3. Ballast water and fresh water",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "All ballast water tanks were gauged individually, and the volumes were calculated by applying the applicable trim and list corrections. The fresh water quantity was provided by the Chief Officer.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "4.4. Fuel R.O.B.",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "According to the logbook — FWE.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "4.5. Initial Draft details",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Final",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "The final Draft Survey was carried out on ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "final_date",
              },
              "type": "dataField",
            },
          ],
          "text": "24/Jun/2026",
          "type": "text",
        },
        {
          "text": ", from ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "final_start",
              },
              "type": "dataField",
            },
          ],
          "text": "14:00h",
          "type": "text",
        },
        {
          "text": " up to ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "field": "final_end",
              },
              "type": "dataField",
            },
          ],
          "text": "16:30h",
          "type": "text",
        },
        {
          "text": " local time jointly with ship's command and the undersigned surveyor to ascertain the total quantity of the cargo loaded being the following figures disclosed:",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Shore Scale / BsL figures (Official): —",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "NAABSA's surveyor figures: —",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Difference as per our figures: — or —",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Vessel's figures: —",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Draft readings: Starboard side from shore, alongside vessel and Port side from boat.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "6.1. Draft readings",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "headers": [
          "Draft Mark",
          "Means (m)",
          "Mean corrected (m)",
          "",
          "Item",
          "Value",
        ],
        "rows": [
          [
            "Fwd",
            "4.550",
            "4.5503",
            "",
            "Trim observed",
            "-0.8300 m",
          ],
          [
            "Ms",
            "4.970",
            "4.9701",
            "",
            "Trim corrected",
            "-0.8300 m",
          ],
          [
            "Aft",
            "5.380",
            "5.3800",
            "",
            "List",
            "—",
          ],
          [
            "",
            "",
            "",
            "",
            "Deflection",
            "—",
          ],
        ],
        "tableId": "fin_readings",
      },
      "type": "dataTable",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "6.2. Sea water density",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "A seawater sample was collected in way of the midship draft mark, on the sea side. The vessel's hydrometer was considered the official instrument for all readings.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "6.3. Ballast water and fresh water",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "All ballast water tanks were gauged individually, and the volumes were calculated by applying the applicable trim and list corrections. The fresh water quantity was provided by the Chief Officer.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "6.4. Fuel R.O.B.",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "Declared by the Chief Engineer at the time of survey.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "6.5. Final Draft details",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Photographic Report",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "7.1. Initial",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "heightMm": 100,
        "photoId": null,
        "slotId": "photos_initial",
        "src": null,
        "widthMm": 150,
      },
      "type": "photoFrame",
    },
    {
      "attrs": {
        "level": 3,
      },
      "content": [
        {
          "text": "7.3. Final",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "attrs": {
        "heightMm": 100,
        "photoId": null,
        "slotId": "photos_final",
        "src": null,
        "widthMm": 150,
      },
      "type": "photoFrame",
    },
    {
      "attrs": {
        "level": 2,
      },
      "content": [
        {
          "text": "Attachment",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "text": "Draft Survey Certificates issued by undersigned surveyor.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Draft Survey Certificate issued by vessel.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "text": "Draft Survey Certificate issued by Terminal's surveyor.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
